--- a/src/components/profile/profile.module.css
+++ b/src/components/profile/profile.module.css
@@ -1,3 +1,32 @@
+.profile {
+    width:320px;
+    height:auto;
+    background-color: rgba(0,0,0,0.05);
+    text-align: center;
+
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-weight: 400;
+    margin-left: 40px;
+    border-radius: 10px;
+}
+.description{
+    padding: 40px 0;
+    line-height: 1.02;
+    color: rgba(0, 0, 0, 0.5);
+}
+
+.avatar{
+    display: inline-block;
+    max-width: 200px;
+    width:50%;
+    height:auto;
+    border-radius: 50%;
+}
+
+.name{
+    font-weight: 500;
+    color: rgba(0, 0, 0, 1);
+}
 .list {
     list-style: none;
     display: flex;
